gccida/g0/mark_regs_live_at_end
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_regs_live_at_end/src/flow.c:1400:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_regs_live_at_end/src/flow.c:1462:48: error: use of undeclared identifier 'mark_reg_0'
diddle_return_value( ( void ( *)( rtx, void *))mark_reg_0, set); 
                                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_regs_live_at_end/src/obj/flow.o] Error 1
